--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const metadata = {
     image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
   >
     <Fragment slot="title">
-      Volve SA <span class="text-accent dark:text-white highlight"> - Astro 4.0</span> (Test Site)
+      Volvo SA <span class="text-accent dark:text-white highlight"> - Astro 4.0</span> (Test Site)
     </Fragment>
 
     <Fragment slot="subtitle">
