--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -46,14 +46,14 @@ import '@fontsource-variable/inter';
     --aw-font-serif: 'InterVariable';
     --aw-font-heading: 'InterVariable';
 
-    --aw-color-primary: rgb(1 97 239);
+    --aw-color-primary: #6EACDA;
     --aw-color-secondary: rgb(1 84 207);
     --aw-color-accent: rgb(109 40 217);
 
     --aw-color-text-heading: rgb(247, 248, 248);
     --aw-color-text-default: rgb(229 236 246);
     --aw-color-text-muted: rgb(229 236 246 / 66%);
-    --aw-color-bg-page: rgb(3 6 32);
+    --aw-color-bg-page: rgb(2, 21, 38);
 
     ::selection {
       background-color: black;
