--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,81 +21,72 @@ const metadata = {
 <Layout metadata={metadata}>
   <!-- Hero Widget ******************* -->
 
-  <Hero
-    actions={[
-      {
-        variant: 'primary',
-        text: 'Get template',
-        href: 'https://github.com/onwidget/astrowind',
-        target: '_blank',
-        icon: 'tabler:download',
-      },
-      { text: 'Learn more', href: '#features' },
-    ]}
-    image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
-  >
-    <Fragment slot="title">
-      Volvo SA <span class="text-accent dark:text-white highlight"> - Astro 4.0</span> (Test Site)
-    </Fragment>
 
-    <Fragment slot="subtitle">
-      <span class="hidden sm:inline">
-        <span class="font-semibold">AstroWind</span> is a free, customizable and production-ready template for Astro 4.0
-        + Tailwind CSS.</span
-      >
-      <span class="block mb-1 sm:hidden font-bold text-blue-600">AstroWind: Production-ready.</span>
-      Suitable for Startups, Small Business, SaaS websites, Professional Portfolios, Marketing websites, Landing Pages &
-      Blogs.
-    </Fragment>
-  </Hero>
+<div class="relative bg-cover bg-center h-[40vh] text-white overflow-hidden">
+  <!-- Background Image -->
+  <div class="absolute inset-0">
+    <img src="/src/assets/images/volvo_hero2.jpeg" alt="Volvo Hero Background" class="object-cover object-center w-full h-full" />
+    <div class="absolute inset-0 bg-black opacity-30"></div>
+  </div>
+  
+  <!-- Text Content -->
+    <div class="relative z-10 flex flex-col justify-center items-center h-full text-center px-4 pb-[8rem]">
 
-  <!-- Note Widget ******************* -->
+      <Hero
+        actions={[
+          {
+            variant: 'primary',
+            text: 'Join Club',
+            href: 'https://github.com/onwidget/astrowind',
+            target: '_blank',
+            icon: 'tabler:download',
+          },
+        ]}>
+        <Fragment slot="title">
+          Volvo Car Club of South
+        </Fragment>
 
-  <Note />
+        <Fragment slot="subtitle">
+          <span class="hidden sm:inline">
+            <span class="font-semibold"> 
+              Join our community of Volvo enthusiasts where you can celebrate the legacy of Volvo, connect with like-minded owners, and enjoy exclusive events and benefits.
+            </span>
+          </span>
+        </Fragment>
+      </Hero>
+    </div>
+  </div>
 
   <!-- Features Widget *************** -->
 
   <Features
     id="features"
-    tagline="Features"
-    title="What you get with AstroWind"
+    title="What you get when you join"
     subtitle="One of the most professional and comprehensive templates currently on the market. Most starred & forked Astro theme in 2022."
     items={[
       {
-        title: 'Astro + Tailwind CSS Integration',
+        title: 'Exclusive Events',
         description:
-          'A seamless integration between two great frameworks that offer high productivity, performance and versatility.',
+          'Participate in drives, rallies, and social gatherings with fellow Volvo enthusiasts.',
         icon: 'tabler:brand-tailwind',
       },
       {
-        title: 'Ready-to-use Components',
+        title: 'Membership Perks',
         description:
-          'Widgets made with Tailwind CSS ready to be used in Marketing Websites, SaaS, Blogs, Personal Profiles, Small Business...',
+          ' Enjoy access to technical support, our bi-monthly magazine "Rolling Australia," and special discounts on parts and services.',
         icon: 'tabler:components',
       },
       {
-        title: 'Best Practices',
+        title: 'Community',
         description:
-          'Creating secure, efficient, and user-friendly websites that deliver exceptional experiences and lasting value.',
+          'Be part of a network of Volvo lovers who share your enthusiasm and knowledge.',
         icon: 'tabler:list-check',
       },
       {
-        title: 'Excellent Page Speed',
+        title: 'Historic Vehicle Registration',
         description:
-          'Having a good page speed impacts organic search ranking, improves user experience (UI/UX) and increase conversion rates.',
+          'Access exclusive benefits for historic vehicle registration, including annual inspections and logbook updates, tailored specifically for vintage Volvo models.',
         icon: 'tabler:rocket',
-      },
-      {
-        title: 'Search Engine Optimization (SEO)',
-        description:
-          "SEO lies in its ability to enhance a website's visibility, driving organic traffic and enabling it to reach a wider audience.",
-        icon: 'tabler:arrows-right-left',
-      },
-      {
-        title: 'Open to new ideas and contributions',
-        description:
-          'Embracing a culture that is open to new ideas and contributions is integral fostering innovation, collaboration, and a dynamic user experience.',
-        icon: 'tabler:bulb',
       },
     ]}
   />
